--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Awesome Band</title>
+    <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+    <script src="src/main.js"></script>
   </head>
-  <body></body>
+  <body onload="init();">
+    <canvas id="canvas" width="500" height="500"></canvas>
+  </body>
 </html>
