--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   </head>
   <body onload="init();">
     <canvas id="canvas" width="500" height="500"></canvas>
+    <div id="toolbar">
+      <button id="play-button">||</button>
+    </div>
   </body>
 </html>
