--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Awesome Band</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
     <script src="src/main.js"></script>
   </head>
   <body onload="init();">
-    <canvas id="canvas" width="500" height="500"></canvas>
+    <canvas id="canvas" width="900" height="500"></canvas>
     <div id="toolbar">
       <button id="play-button">||</button>
     </div>
