--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body onload="init();">
     <canvas id="canvas" width="900" height="500"></canvas>
     <div id="toolbar">
-      <button id="play-button">||</button>
+      <button id="play-button">‣</button>
     </div>
   </body>
 </html>
