Add metronome html & css

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <div id="toolbar">
       <button id="play-button">‣</button>
     </div>
+    <div id="metronome">4</div>
   </body>
 </html>
