--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
-    <script src="src/main.js"></script>
+    <script src="dist/bundle.js"></script>
   </head>
   <body onload="init();">
     <canvas id="canvas" width="900" height="500"></canvas>
