--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
     <script src="dist/bundle.js"></script>
   </head>
-  <body onload="init();">
+  <body>
     <canvas id="canvas" width="900" height="500"></canvas>
     <h1 id="version">0.2</h1>
     <div id="toolbar">
