--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Awesome Band</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
@@ -11,7 +12,9 @@
   <body onload="init();">
     <canvas id="canvas" width="900" height="500"></canvas>
     <div id="toolbar">
-      <button id="play-button">‣</button>
+      <button class="play button"><i class="material-icons">play_arrow</i></button>
+      <button class="pause button"><i class="material-icons">pause</i></button>
+      <button class="stop button"><i class="material-icons">stop</i></button>
     </div>
     <div id="metronome">0</div>
   </body>
