Add version to index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body onload="init();">
     <canvas id="canvas" width="900" height="500"></canvas>
+    <h1 id="version">0.2</h1>
     <div id="toolbar">
       <div>
         <label for="bpm-input">BPM</label>
