Add another instrument & tests for instrument.js

--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
   <body>
     <canvas id="canvas" width="900" height="500"></canvas>
     <h1 id="version">0.2</h1>
+    <a id="source-code-link" href="https://github.com/zoford/awesome-band">
+    </a>
     <div id="toolbar">
       <div>
         <label for="bpm-input">BPM</label>
         <input id="bpm-input" name="bpm-input" value="70"></input>
       </div>
       <div>
-        <button class="play button"><i class="material-icons">play_arrow</i></button>
-        <button class="pause button"><i class="material-icons">pause</i></button>
-        <button class="stop button"><i class="material-icons">stop</i></button>
+        <button id="play-button" class="play button"><i class="material-icons">play_arrow</i></button>
+        <button id="pause-button" class="pause button"><i class="material-icons">pause</i></button>
+        <button id="stop-button" class="stop button"><i class="material-icons">stop</i></button>
       </div>
       <div>
         <button class="settings button"><i class="material-icons">settings</i></button>
