Add bpm label pulse effect

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </a>
     <div id="toolbar">
       <div>
-        <label for="bpm-input">BPM</label>
+        <label id="bpm-label" for="bpm-input">BPM</label>
         <input id="bpm-input" name="bpm-input" value="70"></input>
       </div>
       <div>
@@ -28,6 +28,5 @@
         <button class="settings button"><i class="material-icons">settings</i></button>
       </div>
     </div>
-    <div id="metronome">0</div>
   </body>
 </html>
