--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script src="dist/bundle.js"></script>
   </head>
   <body>
-    <canvas id="canvas" width="900" height="500"></canvas>
-    <h1 id="version">0.2</h1>
+    <canvas id="canvas" width="900" height="400"></canvas>
+    <h1 id="version">v0.2</h1>
     <a id="source-code-link" href="https://github.com/zoford/awesome-band">
     </a>
     <div id="toolbar">
