--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <canvas id="canvas" width="900" height="400"></canvas>
     <h1 id="version">v0.2</h1>
     <a id="source-code-link" href="https://github.com/zoford/awesome-band">
+      <i class="material-icons">code</i>
     </a>
     <div id="toolbar">
       <div>
