--- a/src/template.html
+++ b/src/template.html
@@ -4,15 +4,14 @@
     <meta charset="utf-8">
     <title>Awesome Band</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
   </head>
   <body>
-    <canvas id="canvas" width="900" height="400"></canvas>
     <h1 id="version">v0.3</h1>
     <a id="source-code-link" href="https://github.com/zoford/awesome-band">
       <i class="material-icons">code</i>
     </a>
+    <div id="musicians"></div>
     <div id="toolbar">
       <div>
         <label id="bpm-label" for="bpm-input">BPM</label>
