--- a/src/template.html
+++ b/src/template.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Awesome Band</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
   </head>
   <body>
     <h1 id="version">v0.4</h1>
     <a id="source-code-link" href="https://github.com/zoford/awesome-band">
-      <i class="material-icons">code</i>
+      <ion-icon name="logo-github"></ion-icon>
     </a>
     <div id="musicians"></div>
     <div id="toolbar">
@@ -18,13 +17,14 @@
         <input id="bpm-input" name="bpm-input" value="70"></input>
       </div>
       <div>
-        <button id="play-button" class="play button"><i class="material-icons">play_arrow</i></button>
-        <button id="pause-button" class="pause button"><i class="material-icons">pause</i></button>
-        <button id="stop-button" class="stop button"><i class="material-icons">stop</i></button>
+        <button id="play-button" class="play button"><ion-icon name="play"></ion-icon></button>
+        <button id="pause-button" class="pause button"><ion-icon name="pause"></ion-icon></button>
+        <button id="stop-button" class="stop button"><ion-icon name="square"></ion-icon></button>
       </div>
       <div>
-        <button class="settings button"><i class="material-icons">settings</i></button>
+        <button class="settings button"><ion-icon name="settings"></ion-icon></button>
       </div>
     </div>
+    <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
   </body>
 </html>
