--- a/src/template.html
+++ b/src/template.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Awesome Band</title>
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
   </head>
   <body>
@@ -17,9 +18,15 @@
         <input id="bpm-input" name="bpm-input" value="70"></input>
       </div>
       <div>
-        <button id="play-button" class="play button"><ion-icon name="play"></ion-icon></button>
-        <button id="pause-button" class="pause button"><ion-icon name="pause"></ion-icon></button>
-        <button id="stop-button" class="stop button"><ion-icon name="square"></ion-icon></button>
+        <button data-tippy-content="Play (space-bar)" id="play-button" class="play button">
+          <ion-icon name="play"></ion-icon>
+        </button>
+        <button data-tippy-content="Pause (space-bar)" id="pause-button" class="pause button">
+          <ion-icon name="pause"></ion-icon>
+        </button>
+        <button data-tippy-content="Stop (ESC)" id="stop-button" class="stop button">
+          <ion-icon name="square"></ion-icon>
+        </button>
       </div>
       <div>
         <button class="settings button"><ion-icon name="settings"></ion-icon></button>
