Replace ionicons with font-awesome

--- a/src/template.html
+++ b/src/template.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <title>Awesome Band</title>
     <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+    <script src="https://kit.fontawesome.com/1c7aa8c58d.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
   </head>
   <body>
     <h1 id="version">v0.4</h1>
     <a id="source-code-link" href="https://github.com/zoford/awesome-band">
-      <ion-icon name="logo-github"></ion-icon>
+      <i class="fab fa-github"></i>
     </a>
     <div id="musicians"></div>
     <div id="toolbar">
@@ -19,19 +20,18 @@
       </div>
       <div>
         <button data-tippy-content="Play (space-bar)" id="play-button" class="play button">
-          <ion-icon name="play"></ion-icon>
+          <i class="fas fa-play"></i>
         </button>
         <button data-tippy-content="Pause (space-bar)" id="pause-button" class="pause button">
-          <ion-icon name="pause"></ion-icon>
+          <i class="fas fa-pause"></i>
         </button>
         <button data-tippy-content="Stop (ESC)" id="stop-button" class="stop button">
-          <ion-icon name="square"></ion-icon>
+          <i class="fas fa-stop"></i>
         </button>
       </div>
       <div>
-        <button class="settings button"><ion-icon name="settings"></ion-icon></button>
+        <button class="settings button"><i class="fas fa-cog"></i></button>
       </div>
     </div>
-    <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
   </body>
 </html>
