--- a/src/template.html
+++ b/src/template.html
@@ -20,17 +20,19 @@
       </div>
       <div>
         <button data-tippy-content="Play (space-bar)" id="play-button" class="play button">
-          <i class="fas fa-play"></i>
+          <img src="/images/play.svg">
         </button>
         <button data-tippy-content="Pause (space-bar)" id="pause-button" class="pause button">
-          <i class="fas fa-pause"></i>
+          <img src="/images/pause.svg">
         </button>
         <button data-tippy-content="Stop (ESC)" id="stop-button" class="stop button">
-          <i class="fas fa-stop"></i>
+          <img src="/images/stop.svg">
         </button>
       </div>
       <div>
-        <button class="settings button"><i class="fas fa-cog"></i></button>
+        <button class="settings button">
+          <img src="/images/menu.svg">
+        </button>
       </div>
     </div>
   </body>
