--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
     <a id="source-code-link" href="https://github.com/zoford/awesome-band">
       <i class="fab fa-github"></i>
     </a>
-    <div id="musicians"></div>
+    <div class="musicians-container"></div>
     <div id="toolbar">
       <div>
         <label id="bpm-label" for="bpm-input">BPM</label>
