Change code source link

--- a/src/template.html
+++ b/src/template.html
@@ -4,13 +4,11 @@
     <meta charset="utf-8">
     <title>Awesome Band</title>
     <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
-    <script src="https://kit.fontawesome.com/1c7aa8c58d.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
   </head>
   <body>
-    <h1 id="version">v0.4</h1>
     <a id="source-code-link" href="https://github.com/zoford/awesome-band">
-      <i class="fab fa-github"></i>
+      <img src="/images/source.svg">
     </a>
     <div class="musicians-container"></div>
     <div id="toolbar">
