--- a/src/template.html
+++ b/src/template.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Awesome Band</title>
-    <link rel="shortcut icon" type="/image/png" href="/favicon.png"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
   </head>
   <body>
     <a id="source-code-link" href="https://github.com/zoford/awesome-band">
