Add single note sequencer to musicians

--- a/src/template.html
+++ b/src/template.html
@@ -10,6 +10,9 @@
       <img src="/images/source.svg">
     </a>
     <div class="musicians-container"></div>
+    <table>
+      <tbody id="sequencer-body"></tbody>
+    </table>
     <div id="toolbar">
       <div>
         <label id="bpm-label" for="bpm-input">BPM</label>
