--- a/src/template.html
+++ b/src/template.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Awesome Band</title>
+    <title>Swave</title>
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
   </head>
   <body>
