--- a/src/template.html
+++ b/src/template.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Swave</title>
-    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
+    <title>Swave - Music creation webapp</title>
+    <link rel="shortcut icon" type="image/svg" href="/images/favicon.svg"/>
   </head>
   <body>
     <a id="source-code-link" href="https://github.com/zoford/awesome-band">
