--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
       <img src="/images/source.svg">
     </a>
     <div class="dropdown">
-      <button class="add-button"><img src="/images/add.svg"></button>
+      <button class="add-button"></button>
       <div class="content">
         <div class="content-arrow"></div>
         <button class="option">Sine</button>
