Add progress bar

--- a/src/template.html
+++ b/src/template.html
@@ -18,6 +18,7 @@
         <button class="option">Triangle</button>
       </div>
     </div>
+    <progress class="transport" max="100" value="0"></progress>
     <div class="musicians-container"></div>
     <table>
       <tbody id="sequencer-body"></tbody>
