Change sequencer css and html

--- a/src/template.html
+++ b/src/template.html
@@ -23,9 +23,7 @@
   </div>
   <progress class="transport" max="100" value="0"></progress>
   <div class="musicians-container"></div>
-  <table>
-    <tbody id="sequencer-body"></tbody>
-  </table>
+  <div class="sequencers"></div>
   <div id="toolbar">
     <div>
       <img id="bpm-icon" src="/images/bpm.svg">
