--- a/src/template.html
+++ b/src/template.html
@@ -9,10 +9,16 @@
 
 <body>
   <a id="source-code-link" href="https://github.com/zoford/awesome-band">
-    <img src="/images/source.svg">
+    <svg width="152" height="152" viewBox="0 0 152 152" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M85.232 85.232L152 152V0H0l68.019 68.019c2.022.605 3.68-.776 3.68-.776l5.032-5.032c-8.661-5.516-5.204-11.809-5.204-11.809 1.885-4.09.939-6.294.939-6.294-.79-3.936 1.73-1.416 1.73-1.416 2.363 2.678 1.264 6.297 1.264 6.297-1.725 6.452 3.47 8.817 5.36 9.448 2.045-1.414 4.09-1.57 5.507-1.097-5.514-7.087-6.936-13.227-5.367-18.262l.785-2.045c1.1-2.36 2.987-4.562 5.346-6.92A15.108 15.108 0 0 1 97.474 25.4c.314-.944 2.2-4.72 7.706-7.076 0 0 2.992 1.734 4.731 10.706a37.267 37.267 0 0 1 13.548 13.233c8.658 1.739 10.234 4.573 10.234 4.573-1.885 4.72-4.873 6.764-6.447 7.392.004 4.092-1.409 8.026-4.712 11.328-2.358 2.359-4.56 4.246-6.763 5.503l-2.045 1.1c-5.035 1.884-10.23.778-17.79-5.21.317 1.89.162 4.565-2.669 7.395l-7.233 7.234s-1.52 1.52-.802 3.654z" fill="#000000" />
+    </svg>
   </a>
   <div class="dropdown">
-    <button class="add-button"></button>
+    <button class="add-button">
+      <svg class="ignore" width="84" height="84" viewBox="0 0 84 84" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path class="ignore" opacity="1" d="M84 0H0v84h84V0zM65.333 46.667H46.667v18.666h-9.334V46.667H18.667v-9.334h18.666V18.667h9.334v18.666h18.666v9.334z" fill="#000000" />
+      </svg>
+    </button>
     <div class="content">
       <div class="content-arrow"></div>
       <button class="option">Sine</button>
